--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -8,8 +8,8 @@ page-login {
     }
     .splash-logo {
         margin: auto;
-        background: url('../assets/img-gbcys/appicon.png') repeat transparent;
-        background-size: 100%;
+        background: url('../assets/lina/logo.jpg');
+        background-size: 105%;
         width: 192px;
         height: 192px;
     }
