--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -8,7 +8,7 @@ page-signup {
     }
     .splash-logo {
         margin: auto;
-        background: url('../assets/img-gbcys/appicon.png') repeat transparent;
+        background: url('../assets/lina/appicon.png') repeat transparent;
         background-size: 100%;
         width: 192px;
         height: 192px;
